--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -7,7 +7,7 @@ spring.data.redis.password=redis123
 #spring.data.redis.timeout=60000
 #Database Props
 #DB
-spring.datasource.url=jdbc:mysql://rammbp.local:3306/uamdb
+spring.datasource.url=jdbc:mysql://localhost:3306/uamdb
 spring.datasource.username=root
 spring.datasource.password=Root1234
 #Datasource
